# ArduinoPC

./: CMakeLists.txt  README.md  install-arduinopc.sh  install-tjlarduino.sh
documentation/: .avrduderc
firmware/: arduinopcdefs.h  can-commands.txt  firmware.ino
firmware/IByteStream/: hardwareserialport.cpp  hardwareserialport.h  i2cmasterserialport.cpp  i2cmasterserialport.h  ibytestream.h  softwareserialport.cpp  softwareserialport.h  utilities.h
firmware/include/: arduinopcdefs.h  arduinopcstrings.h  candatapacket.h  canmessage.h  debug.h  fastio.h  firmwareutilities.h  gpio.h  linmessage.h  mcp_can.h  serialportbase.h  serialportinfo.h
firmware/lib/Bitset/: bitset.h
firmware/lib/ByteStream/: bytestream.cpp  bytestream.h  utilities.cpp  utilities.h
firmware/lib/CanController/: canmessage.cpp  canmessage.h  mcp_can.cpp  mcp_can.h
firmware/lib/GPIO/: gpio.h
firmware/lib/HardwareSerialPort/: hardwareserialport.cpp  hardwareserialport.h
firmware/lib/I2CMasterSerialPort/: i2cmasterserialport.cpp  i2cmasterserialport.h
firmware/lib/I2CSlaveSerialPort/: i2cslaveserialport.cpp  i2cslaveserialport.h
firmware/lib/LIN/: lin.cpp  lin.h  linmessage.h
firmware/lib/LinMaster/: linmaster.h  linmessage.cpp  linmessage.h
firmware/lib/SoftwareSerialPort/: softwareserialport.cpp  softwareserialport.h
firmware/lib/Utilities/: utilities.cpp  utilities.h
firmware/src/: arduinopcstrings.cpp  canmessage.cpp  firmwareutilities.cpp  gpio.cpp  lin.cpp  linmessage.cpp  mcp_can.cpp
firmware/test/: binarysearch  binarysearch.cpp
firmware/test/ArduinoDebug/: firmware.ino  main.cpp
firmware/test/ArduinoDebug/include/: Arduino.h  arduinoinit.h  arduinopcstrings.h  (+3 more)
firmware/test/ItemParser/: CMakeLists.txt  main.cpp  utilities.cpp  utilities.h
firmware/test/LIN/: LIN.ino  bitset.cpp  bitset.h  canmessage.cpp  canmessage.h  lin.cpp  lin.h  linmessage.cpp  linmessage.h  utilities.cpp  utilities.h
firmware/test/LIN-Master-Box-Test/: LIN-Master-Box-Test.ino
firmware/test/LIN-Second/: LIN-Second.ino  bitset.cpp  bitset.h  heapskew.h  lin.h  linmessage.cpp  linmessage.h  utilities.cpp  utilities.h
firmware/test/NamespaceTest/: NamespaceTest.ino
firmware/test/ParseCanLin/: ParseLinCan.ino  canmessage.h  heapskew.h
firmware/test/ParseLinCan/: ParseLinCan.ino  canmessage.cpp  canmessage.h  heapskew.h  linmessage.h
firmware/test/shift-register-out/: shift-register-out.ino
test/: arduino-test-serial  arduino-test-serial.cpp
test/attiny-test/: attiny-test.ino
test/attiny-test/include/: arduinoinit.h
(+13 files in other folders)
